--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,31 @@
 annotated-types==0.7.0
 anyio==4.11.0
+cachetools==6.2.1
 certifi==2025.10.5
 charset-normalizer==3.4.4
 distro==1.9.0
 exceptiongroup==1.3.0
+google-auth==2.42.0
+google-genai==1.46.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
 jiter==0.11.1
 openai==2.6.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.12.3
 pydantic_core==2.41.4
 python-dotenv==1.2.1
 regex==2025.10.23
 requests==2.32.5
+rsa==4.9.1
 sniffio==1.3.1
+tenacity==9.1.2
 tiktoken==0.12.0
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
+websockets==15.0.1
