--- a/requirements.txt
+++ b/requirements.txt
@@ -3,28 +3,44 @@ anyio==4.11.0
 cachetools==6.2.1
 certifi==2025.10.5
 charset-normalizer==3.4.4
+click==8.3.1
 distro==1.9.0
 exceptiongroup==1.3.0
+filelock==3.20.0
+fsspec==2025.10.0
 google-auth==2.42.0
 google-genai==1.46.0
 h11==0.16.0
+hf-xet==1.2.0
 httpcore==1.0.9
 httpx==0.28.1
+huggingface-hub==0.36.0
 idna==3.11
 jiter==0.11.1
+mpmath==1.3.0
+numpy==2.2.6
+nvidia-cusparselt-cu12==0.7.1
 openai==2.6.1
+packaging==25.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.12.3
 pydantic_core==2.41.4
 python-dotenv==1.2.1
+PyYAML==6.0.3
 regex==2025.10.23
 requests==2.32.5
 rsa==4.9.1
+safetensors==0.7.0
+shellingham==1.5.4
 sniffio==1.3.1
 tenacity==9.1.2
 tiktoken==0.12.0
+tokenizers==0.22.1
 tqdm==4.67.1
+transformers==4.57.3
+triton==3.5.1
+typer-slim==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
