--- a/rag/requirements.txt
+++ b/rag/requirements.txt
@@ -8,20 +8,28 @@ attrs==25.4.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 dataclasses-json==0.6.7
+distro==1.9.0
 exceptiongroup==1.3.1
 frozenlist==1.8.0
 greenlet==3.3.0
+grpcio==1.76.0
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.3
+hyperframe==6.1.0
 idna==3.11
+jiter==0.12.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==1.2.0
 langchain-classic==1.0.0
 langchain-community==0.4.1
 langchain-core==1.2.1
+langchain-openai==1.1.3
+langchain-qdrant==1.1.0
 langchain-text-splitters==1.1.0
 langgraph==1.0.5
 langgraph-checkpoint==3.0.1
@@ -32,20 +40,28 @@ marshmallow==3.26.1
 multidict==6.7.0
 mypy_extensions==1.1.0
 numpy==2.2.6
+openai==2.12.0
 orjson==3.11.5
 ormsgpack==1.12.1
 packaging==25.0
+portalocker==3.2.0
 propcache==0.4.1
+protobuf==6.33.2
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 pypdf==6.4.2
 python-dotenv==1.2.1
 PyYAML==6.0.3
+qdrant-client==1.16.2
+regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
+sniffio==1.3.1
 SQLAlchemy==2.0.45
 tenacity==9.1.2
+tiktoken==0.12.0
+tqdm==4.67.1
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
